      NVIDIA kernel module failed to build with error "unknown type name
      'vm_fault_t'".
    - Add PRIME Synchronization support for Linux kernel 5.4 and newer.

  [ Andreas Beckmann ]
  * Fix #includes in conftest.sh to fix kernel module build for Linux 5.7,
    thanks to Jiri Palecek.  (Closes: #960735)
  * Refresh patches.

 -- Andreas Beckmann <anbe@debian.org>  Sun, 28 Jun 2020 17:27:49 +0200

nvidia-graphics-drivers (390.132-1) stretch; urgency=medium

  * New upstream legacy branch release 390.132 (2019-11-08).
    - Fixed kernel module build problems with Linux kernel 5.4.0 release
      candidates.
    - Updated nvidia-bug-report.sh to collect information about X server crashes
      from coredumpctl, when available.

  [ Andreas Beckmann ]
  * Refresh patches.
  * debian/gen-control.pl: Support substitutions in the Architecture field and
    skip packages with empty or commented Architecture field (430.50-2).
  * Create and commit tarball symlinks for legacy branches (430.64-1).
  * Allow alternative libnvidia-{tesla,legacy-*}-ml1 packages to substitute
    libnvidia-ml1 (430.64-2).
    - Add Provides: libnvidia-ml.so.1 (= ${nvidia:Version}).
    - Generate alternative versioned dependency on libnvidia-ml.so.1 through
      the symbols file.
  * Allow alternative libnvidia-{tesla,legacy-*}-cuda1 packages to substitute
    libcuda1 in third-party packages (430.64-3).
    - Add Provides: libcuda.so.1 (= ${nvidia:Version}).
    - Generate alternative versioned dependency on libcuda.so.1 through the
      symbols file.
  * Use substitution to keep Standards-Version in sync (430.64-5).
  * Insert '-' between suffix ending with digit and SOVERSION (435.21-3).
  * Rename "legacy" variables to more generic "variant" (440.44-2).
  * bug-control: Report information about more (virtual) packages (440.64-2).
  * Bump Standards-Version to 4.5.0. No changes needed.
  * Update lintian overrides.