@@ -1,6 +1,6 @@
 # The NVIDIA license does not allow any form of modification.
 [!amd64]: binary-file-built-without-LFS-support
-shlib-calls-exit
+exit-in-shared-library
 hardening-no-bindnow
 hardening-no-fortify-functions
 hardening-no-relro
