@@ -1,7 +1,7 @@
 # The NVIDIA license does not allow any form of modification.
 [!amd64]: binary-file-built-without-LFS-support
-shlib-calls-exit
-[i386]: shlib-with-non-pic-code
+exit-in-shared-library
+[i386]: specific-address-in-shared-library
 hardening-no-bindnow
 hardening-no-fortify-functions
 hardening-no-relro
